# logspammer

./: Cargo.toml  Dockerfile  README.md  build.sh  run_docker.sh  verify.sh
attack/: Cargo.toml
attack/src/: main.rs
src/: lib.rs
