[package]
name = "attack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ellipsis-client = "0.1.10"
shellexpand = "2.1.2"
clap = { version = "3.0.13", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
solana-sdk = "=1.14.9"
solana-client = "=1.14.9"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint" ] } 